update some code to use Java 10 change some code to see when is useful to use var